# lereng

./: .gitignore  .pdm-python  Makefile  README.md  __init__.py  inspection.py  pyproject.toml  reduce_areas.py  requirements.txt  sample.py  test.py  vdb_test.py
lereng/: __init__.py  main.py
lereng/materials/: lereng_viz.html  lereng_viz.js  standard_name.csv  standard_name.pkl
lereng/materials/indonesia_maps/: provinsi-light.geojson
lereng/materials/vdb/: chroma.sqlite3
lereng/materials/vdb/1f928f4f-7445-446f-b490-fdc06b714b6f/: index_metadata.pickle
lereng/sample/: jabar_sample_data_kemiskinan.csv  nation_sample_population.csv
lereng/src/: geovalid.py  inspection.py  map2jpg.py  reduce_areas.py  vdb_create.py  vdb_creation.py  vdb_creation2.py  vdb_test.py
materials/: map_d3js.html  standard_name.csv
src/lereng/: __init__.py  main.py
src/lereng/materials/: lereng_viz.js  maps_viz_template.html
src/lereng/sample/: jabar_sample_data_kemiskinan.csv  nation_sample_population.csv  nation_sample_unmatched.csv
src/lereng/utils/: common.py  map2viz.py  vdb_create.py
temp_viz/: 36SrCaRJ-data.geojson  36SrCaRJ-lerengviz.html  69i4v7PQ-data.geojson  69i4v7PQ-lerengviz.html  B6mujoUK-data.geojson  B6mujoUK-lerengviz.html  BrSQhTGB-data.geojson  BrSQhTGB-lerengviz.html  CksL6J6n-data.geojson  CksL6J6n-lerengviz.html  LBbR5b2d-data.geojson  LBbR5b2d-lerengviz.html  VY2xQnoB-data.geojson  VY2xQnoB-lerengviz.html  XFfyFGWB-data.geojson  XFfyFGWB-lerengviz.html  apBEz3jb-data.geojson  apBEz3jb-lerengviz.html  bPAUzEgR-data.geojson  bPAUzEgR-lerengviz.html  dUNyezfT-data.geojson  dUNyezfT-lerengviz.html  lereng_viz.html  map_with_data.geojson  maps_viz_template.html  test.html  test2.html  test3.html  ucrQ3ayh-data.geojson  ucrQ3ayh-lerengviz.html
test/: test_lereng.py  test_map.ipynb
test/d3js/: merge.py
test/temp_viz/: 7RhJat8v-data.geojson  7RhJat8v-lerengviz.html  RgyrpMtK-data.geojson  RgyrpMtK-lerengviz.html
tests/: test_lereng.py  test_map.ipynb
(+1 files in other folders)
