[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lereng"
version = "0.0.7"
description = "Mapping Your Indonesia Data to Map. Without LatLong."
authors = [
    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"}
]
dependencies = [
    "geopandas==1.0.1",
    "matplotlib==3.9.1.post1",
    "chromadb==0.5.18",
    "joblib",
    "jinja2",
    "shortuuid",
    "ipython"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["LLM", "AI", "machine learning", "geospatial"]
urls = {"Homepage" = "https://alamhanz.xyz"}

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
packages = ["lereng"]
