[project]
name = "lereng"
version = "0.1.0"
description = "Mapping Your Indonesia Data to Map. Without LatLong."
authors = [
    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"},
    {name = "Alamsyah Koto Hanza", email = "alamhanz@gmail.com"},
]
dependencies = [
    "geopandas==1.0.1",
    "matplotlib==3.9.1.post1",
    "chromadb==0.5.18",
    "joblib",
    "jinja2",
    "shortuuid",
    "ipython",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["LLM", "AI", "machine learning", "geospatial"]
urls = {"Homepage" = "https://alamhanz.xyz"}

[tool.pdm]
distribution = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lereng" = ["**/*"]